# go-proto-validators

./: .gitignore  .travis.yml  BUILD.bazel  Dockerfile  Makefile  README.md  WORKSPACE  go.mod  go.sum  go_deps.bzl  helper.go  helper_test.go  install_protoc.sh  multierror.go  validator.pb.go  validator.proto  validators.pb.go
errors/: errors.go  errors_test.go  types.pb.go  types.proto
examples/: BUILD.bazel  enum.pb.go  enum.proto  enum.validator.pb.go  nested.pb.go  nested.proto  nested.validator.pb.go  uuid.pb.go  uuid.proto  uuid.validator.pb.go
gazelle/: BUILD.bazel
github.com/mwitkow/go-proto-validators/: validator.pb.go
internal/generator/: BUILD.bazel  genvalidators.go  types.go
plugin/: BUILD.bazel  const.go  plugin.go  uuid.go
protoc-gen-govalidators/: BUILD.bazel  main.go
scripts/: lint.sh  prepare-deps.sh  regenerate.sh  test.sh  update-vendor.sh
scripts/includes/: deps.sh
test/: BUILD.bazel  Makefile  validator_proto2.pb.go  validator_proto2.proto  validator_proto2.validator.pb.go  validator_proto3.pb.go  validator_proto3.proto  validator_proto3.validator.pb.go  validator_proto3_map.pb.go  validator_proto3_map.proto  validator_proto3_map.validator.pb.go  validator_proto3_oneof.pb.go  validator_proto3_oneof.proto  validator_proto3_oneof.validator.pb.go  validator_test.go
test/generic/: generic.proto  generic_test.go
test/gogo/: BUILD.bazel  validator_test.go
test/golang/: BUILD.bazel  validator_test.go
util/: util.go  util_test.go
validator/: validator.pb.go  validator.validator.pb.go
