load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:compiler.bzl", "go_proto_compiler")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

gazelle(
    name = "gazelle",
)

# gazelle:build_file_name BUILD.bazel
# gazelle:prefix github.com/mwitkow/go-proto-validators
# gazelle:proto_import_prefix github.com/mwitkow/go-proto-validators

go_proto_compiler(
    name = "go_proto_validators",
    plugin = "//protoc-gen-govalidators",
    suffix = ".validator.pb.go",
    valid_archive = False,
    visibility = ["//visibility:public"],
    deps = [
        ":go_default_library",
    ],
)

proto_library(
    name = "validators_proto",
    srcs = ["validators.proto"],
    import_prefix = "github.com/mwitkow/go-proto-validators",
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

go_proto_library(
    name = "validators_go_proto",
    importpath = "github.com/mwitkow/go-proto-validators",
    proto = ":validators_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["helper.go"],
    embed = [":validators_go_proto"],
    importpath = "github.com/mwitkow/go-proto-validators",
    visibility = ["//visibility:public"],
)
