load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    importpath = "github.com/mwitkow/go-proto-validators/plugin",
    srcs = ["plugin.go"],
    deps = [
        "//:validators_gogo",
        "@com_github_gogo_protobuf//gogoproto:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_gogo_protobuf//protoc-gen-gogo/descriptor:go_default_library",
        "@com_github_gogo_protobuf//protoc-gen-gogo/generator:go_default_library",
        "@com_github_gogo_protobuf//vanity:go_default_library",
    ],
    visibility = ["//visibility:public"],
)
