load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mwitkow/go-proto-validators/protoc-gen-govalidators",
    visibility = ["//visibility:private"],
    deps = [
        "//plugin:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_gogo_protobuf//protoc-gen-gogo/generator:go_default_library",
    ],
)

go_binary(
    name = "protoc-gen-govalidators",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
