load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mwitkow/go-proto-validators/protoc-gen-govalidators",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/generator:go_default_library",
        "@org_golang_google_protobuf//compiler/protogen:go_default_library",
    ],
)

go_binary(
    name = "protoc-gen-govalidators",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
