load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "proto2",
    srcs = ["validator_proto2.proto"],
    deps = [
        "//:validator_proto",
        "@gogo_special_proto//github.com/gogo/protobuf/gogoproto",
    ],
    visibility = ["//test:__subpackages__"],
)

proto_library(
    name = "proto3",
    srcs = ["validator_proto3.proto"],
    deps = [
        "//:validator_proto",
        "@gogo_special_proto//github.com/gogo/protobuf/gogoproto",
    ],
    visibility = ["//test:__subpackages__"],
)

proto_library(
    name = "proto3_oneof",
    srcs = ["validator_proto3_oneof.proto"],
    deps = [
        "//:validator_proto",
    ],
    visibility = ["//test:__subpackages__"],
)

proto_library(
    name = "proto3_map",
    srcs = ["validator_proto3_map.proto"],
    visibility = ["//test:__subpackages__"],
)
