load("@io_bazel_rules_go//go:def.bzl", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
    name = "go_proto",
    importpath = "dummy",
    protos = [
        "//test:proto2",
        "//test:proto3",
        "//test:proto3_oneof",
        "//test:proto3_map",
    ],
    compilers = [
        "//:go_proto_validators",
        "@io_bazel_rules_go//proto:go_proto",
    ],
    deps = [
        "@com_github_gogo_protobuf//gogoproto:go_default_library",
    ],
    visibility = [":__pkg__"]
)

go_test(
    name = "go_default_test",
    importpath = "dummy",
    srcs = ["validator_test.go"],
    embed = [":go_proto"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
